2005-04-14  Alan Modra  <amodra@bigpond.net.au>

	* corefile.c (core_init): Call bfd_get_synthetic_symtab.

2005-04-14  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am (NO_WERROR): Define.
	* acinclude.m4: Include ../bfd/warning.m4.
	* configure.in: Invoke AM_BINUTILS_WARNINGS.
	* Makefile.in: Regenerate.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.

2005-04-06  Nick Clifton  <nickc@redhat.com>

	* po/rw.po: New translation: Kinyarwanda
	* configure.in (ALL_LINGUAS): Add rw
	* configure: Regenerate.

2005-04-04  Nick Clifton  <nickc@redhat.com>

	* configure.in: Add a check for <unistd.h> providing a prototype
	for getopt() which is compatible with the one in
	include/getopt.h.  If so then define HAVE_DECL_GETOPT.
	* configure: Regenerate.
	* gconfig.in (HAVE_DECL_GETOPT): Add.

2005-03-29  Nick Clifton  <nickc@redhat.com>

	* po/de.po: Updated German translation.

2005-03-17  Nick Clifton  <nickc@redhat.com>

	* po/vi.po: Updated Vietnamese translation.

2005-03-16  Nick Clifton  <nickc@redhat.com>
	    Ben Elliston  <bje@au.ibm.com>

	* configure.in (werror): New switch: Add -Werror to the
	compiler command line.  Enabled by default.  Disable via
	--disable-werror.
	* configure: Regenerate.

2005-03-15  Nick Clifton  <nickc@redhat.com>

	* basic_blocks.c (print_exec_counts): Step through sorted array of
	basic blocks.

2005-03-15  Alan Modra  <amodra@bigpond.net.au>

	* po/es.po: Commit new Spanish translation.

	* po/fr.po: Commit new French translation.

2005-03-14  Alan Modra  <amodra@bigpond.net.au>

	* gmon_io.c (gmon_write_raw_arc): Return 1 for invalid size.

2005-03-14  Alan Modra  <amodra@bigpond.net.au>

	* po/tr.po: Commit new Turkish translation.

2005-03-05  Alan Modra  <amodra@bigpond.net.au>

	* po/gprof.pot: Regenerate.

2005-02-22  Alan Modra  <amodra@bigpond.net.au>

	* basic_blocks.c: Warning fixes.
	* gmon_io.c: Likewise.
	* hist.c: Likewise.
	* hist.h: Likewise.

2005-01-31  Andrew Cagney  <cagney@gnu.org>
